Closed Bug 1448071 Opened 7 years ago Closed 7 years ago

Dictionary dont work with UNC Path

Categories

(Core :: Spelling checker, defect)

59 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox59 --- wontfix
firefox60 --- verified
firefox61 --- verified

People

(Reporter: schaaban, Assigned: emk)

References

Details

(Keywords: regression)

Attachments

(2 files)

Attached image bugreport.png
User Agent: Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:59.0) Gecko/20100101 Firefox/59.0 Build ID: 20180315233128 Steps to reproduce: Put a Firefox Profile Path onto Network like \\foo\bar\ edit %appdata%\Roaming\Mozilla\Firefox\profiles.ini Path=\\foo\bar\ (you can also type Path=\\foo\bar if you want ) save everything and close firefox install a dictionary (in our case german) and activate it Actual results: as soon as you start firefox and enter something in a multiple line textbox (same goes for single line textboxes as soon you start the dictionary) every single word is underlined in red Expected results: only wrong typed words (for example wrods) should be underlined red while typing
Component: Plug-ins → Spelling checker
Regression window: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=cd86cbfcd98fdd39a38eccf1300a39a7b8fa03c7&tochange=2470860d3e9a6630dc3e9ee6c4ea84f878927172 Regressed by: fed8a2c0d314 Masatoshi Kimura — Bug 1421123 - Stop using GetNativePath in hunspell. r=masayuki
Blocks: 1421123
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
I tested this patch locally.
Assignee: nobody → VYV03354
Status: NEW → ASSIGNED
Comment on attachment 8961723 [details] Bug 1448071 - Support UNC paths for spell check dictionaries. https://reviewboard.mozilla.org/r/230596/#review236470
Attachment #8961723 - Flags: review?(masayuki) → review+
Pushed by VYV03354@nifty.ne.jp: https://hg.mozilla.org/integration/autoland/rev/32d079f95f52 Support UNC paths for spell check dictionaries. r=masayuki
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
Comment on attachment 8961723 [details] Bug 1448071 - Support UNC paths for spell check dictionaries. Approval Request Comment [Feature/Bug causing the regression]: 1421123 [User impact if declined]: Spell checker not working for some users. [Is this code covered by automated tests?]: No, we have very poor coverage of tests about remote profiles. [Has the fix been verified in Nightly?]: Yes. [Needs manual test from QE? If yes, steps to reproduce]: Yes, see comment #0. [List of other uplifts needed for the feature/fix]: None [Is the change risky?]: No [Why is the change risky/not risky?]: Only added a trivial string manipulation. [String changes made/needed]: No
Attachment #8961723 - Flags: approval-mozilla-beta?
Comment on attachment 8961723 [details] Bug 1448071 - Support UNC paths for spell check dictionaries. looks safe enough. beta60+, should be in 60.0b8.
Attachment #8961723 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
Managed to reproduce the issue on Firefox Beta 60.0b7 on Windows 7 x64 using the STR from comment 0. Verified fixed on the latest Nightly 61.0a1 (2018-03-29) and Beta 60.0b8. I could not reproduce the issue on Windows 10 x64 on Beta 60.0b6 or latest Nightly 61.0a1 (2018-03-30). Masatoshi Kimura, should I verify this bug on Ubuntu and Mac OS X also?
Flags: needinfo?(VYV03354)
No, this bug is specific to Windows.
Flags: needinfo?(VYV03354)
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: