Bug 1448071 - Support UNC paths for spell check dictionaries. r=masayuki, a=jcristau

MozReview-Commit-ID: 5Ig2SZKf44R

--HG--
extra : source : 32d079f95f52c30010a3d0dfeb5fa952acbfa501